edition = "2023";

option go_package = "github.com/solidDoWant/backup-tool/pkg/grpc/gen/proto/backup-tool/postgres/v1;postgres_v1";

import "credentials.proto";
import "google/protobuf/duration.proto";

message RestoreRequest {
  EnvironmentCredentials credentials = 1;
  string input_file_path = 2;
  RestoreOptions options = 3;
}

message RestoreOptions {}

message RestoreResponse {}
